- (FEAT) support F11 fence-agent paths
- (FEAT) bringing back the koan live CD
- (FEAT) koan live CD can go interactive if no profile is specified and system autodiscovery fails
- (BUGF) koan autodetection now can gather MACs/IPs for bridged interfaces better
- (FEAT) F11 and RAID support for keep_ssh_host_keys 
- (FEAT) keep_ssh_host_keys gets F11+RAID support

1.6.6 (for more accurate listing, see release16 branch)
- (BUGF) don't use -m option for drac unless power_id is set
- (BUGF) don't run createrepo on reposync'd repos, it is redundant
- (BUGF) fix error message when wrong virt ram value is applied
- (FEAT) koan now partially works in source code form on EL 2
- (FEAT) discover repomd filenames (for F11 and later)
- (BUGF) Satellite also has a python module named "server" so we have to remove ours for Python imports.  This code was not used anyway.
- (BUGF) fix typo in network config snippet

- ... - 1.6.5
- (BUGF) don't use json on python x<=2.3 since we know it's simplejson x<2.0, which has unicode issues
- (FEAT) support F-11 imports
- (BUGF) don't add koan virtual interfaces for vlan tagged interfaces
- (BUGF) pair PAE and non-PAE content in imports better 
- (BUGF) don't try to scp /etc/cobbler/*.ks on replicate, this is an old path
- (BUGF) set proper umask on .mtime files
- (BUGF) fix koan error with unspecified arch using --kexec
- (BUGF) don't use --onboot=on in network config for kickstart for RHEL 3.
- (FEAT) koan can be built on EL-2

- Fri May 8 2009 - 1.6.4
- (BUGF) empty nameserver search paths now don't screw up resolv.conf
- (BUGF) unicode fix for --template-files feature
- (BUGF) mod python input fix for repo/profile associations in webapp
- (BUGF) change "hostname" to "option hostname" in dhcp.template
- (BUGF) fixes for unicode problem with Cheetah, repos, and json
- (BUGF) unicode fix for --template-files feature
- (BUGF) another unicode fix
- (BUGF) bonding interface setup for RHEL4 now works