@@ -25,6 +25,8 @@ Cobbler CHANGELOG
 - (BUGF) koan autodetection now can gather MACs/IPs for bridged interfaces better
 - (FEAT) F11 and RAID support for keep_ssh_host_keys 
 - (FEAT) keep_ssh_host_keys gets F11+RAID support
+- (FEAT) per-task logging
+- (BUGF) validateks checkes /every/ kickstart, as different variables may be present
 
 1.6.6 (for more accurate listing, see release16 branch)
 - (BUGF) don't use -m option for drac unless power_id is set
